[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/maps/basics/basics.gd" type="Script" id=1]
[ext_resource path="res://data/resources/environments/default.tres" type="Environment" id=2]
[ext_resource path="res://data/scenes/game/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/scenes/game/coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/scenes/game/goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/resources/gridmaps/base.tres" type="MeshLibrary" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 2, 2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 500, -10, 500 )

[node name="Basics" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.819152, 0.573577, 0, -0.573577, 0.819152, -2.69759, 22.2268, -52.2992 )
shadow_enabled = true
directional_shadow_max_distance = 50.0

[node name="Ball" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.42723, 0 )

[node name="Triggers" type="Spatial" parent="."]

[node name="WelcomeToVeraball" type="Area" parent="Triggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -8 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="Triggers/WelcomeToVeraball"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 1 )

[node name="CollectAllTheCoins" type="Area" parent="Triggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -23 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="Triggers/CollectAllTheCoins"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 1 )

[node name="ReachTheGoal" type="Area" parent="Triggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, -8, -97 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="Triggers/ReachTheGoal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 1 )

[node name="Reset" type="Area" parent="Triggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -30, 0 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="Triggers/Reset"]
shape = SubResource( 2 )

[node name="Coins" type="Spatial" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.98988, -7 )

[node name="Coin1" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.98988, -9 )

[node name="Coin2" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.98988, -11 )

[node name="Coin3" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.98988, -13 )

[node name="Coin4" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0.98988, -28 )

[node name="Coin5" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0.98988, -30 )

[node name="Coin6" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0.98988, -32 )

[node name="Coin7" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0.98988, -34 )

[node name="Coin8" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -7.01012, -95 )

[node name="Coin9" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -7.01012, -97 )

[node name="Coin10" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -7.01012, -93 )

[node name="Coin11" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -7.01012, -91 )

[node name="Coin12" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -7.01012, -167 )

[node name="Coin13" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -7.01012, -165 )

[node name="Coin14" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -7.01012, -169 )

[node name="Coin15" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -7.01012, -163 )

[node name="Coin16" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0.98988, -210 )

[node name="Coin17" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0.98988, -212 )

[node name="Coin18" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0.98988, -216 )

[node name="Coin19" parent="Coins" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0.98988, -214 )

[node name="Goals" type="Spatial" parent="."]

[node name="Goal" parent="Goals" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, -264 )

[node name="Geometry" type="Spatial" parent="."]

[node name="GridMap" type="GridMap" parent="Geometry"]
mesh_library = ExtResource( 6 )
cell_octant_size = 4
data = {
"cells": PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65520, 65401, 0, -65519, 65401, 0, -65518, 65401, 0, -65521, 65402, 0, -65520, 65402, 0, -65519, 65402, 0, -65518, 65402, 0, -65517, 65402, 0, -65521, 65403, 0, -65520, 65403, 0, -65519, 65403, 0, -65518, 65403, 0, -65517, 65403, 0, -65522, 65404, 0, -65521, 65404, 0, -65520, 65404, 0, -65519, 65404, 0, -65518, 65404, 0, -65517, 65404, 0, -65522, 65405, 0, -65521, 65405, 0, -65520, 65405, 0, -65519, 65405, 0, -65518, 65405, 0, -65523, 65406, 0, -65522, 65406, 0, -65521, 65406, 0, -65520, 65406, 0, -65519, 65406, 0, -65518, 65406, 0, -65521, 65407, 0, -65520, 65407, 0, -65519, 65407, 0, -65518, 65407, 0, -65521, 65408, 0, -65520, 65408, 0, -65519, 65408, 0, -65521, 65409, 0, -65520, 65409, 0, -65519, 65409, 0, -65522, 65410, 0, -65521, 65410, 0, -65520, 65410, 0, -65519, 65410, 0, -65522, 65411, 0, -65521, 65411, 0, -65520, 65411, 0, -65519, 65411, 0, -65522, 65412, 0, -65521, 65412, 0, -65520, 65412, 0, -65519, 65412, 0, -65521, 65413, 0, -65520, 65413, 0, -65519, 65413, 0, -65521, 65414, 0, -65520, 65414, 0, -65519, 65414, 0, -65521, 65415, 0, -65520, 65415, 0, -65521, 65416, 0, -65520, 65416, 0, -65521, 65417, 0, -65520, 65417, 0, -65521, 65418, 0, -65522, 65419, 0, -65521, 65419, 0, -65522, 65420, 0, -65521, 65420, 0, -65522, 65421, 0, -65521, 65421, 0, -65523, 65422, 0, -65522, 65422, 0, -65521, 65422, 0, -65523, 65423, 0, -65522, 65423, 0, -65521, 65423, 0, -65523, 65424, 0, -65522, 65424, 0, -65521, 65424, 0, -65523, 65425, 0, -65522, 65425, 0, -65524, 65426, 0, -65523, 65426, 0, -65522, 65426, 0, -65524, 65427, 0, -65523, 65427, 0, -65522, 65427, 0, -65523, 65428, 0, -65522, 65428, 0, -65523, 65429, 0, -65522, 65429, 0, -65523, 65430, 0, -65522, 65430, 0, -65523, 65431, 0, -65522, 65431, 0, -65523, 65432, 0, -131059, 65433, 0, -65523, 65433, 1, -131059, 65434, 0, -196596, 65435, 0, -196595, 65435, 0, -131059, 65435, 1, -196596, 65436, 0, -196595, 65436, 0, -196596, 65437, 1, -196595, 65437, 1, -262132, 65438, 0, -262133, 65439, 0, -262132, 65439, 0, -327669, 65440, 0, -262133, 65440, 0, -327670, 65441, 0, -327669, 65441, 0, -262133, 65441, 0, -327670, 65442, 0, -262134, 65442, 0, -262133, 65442, 0, -327670, 65443, 0, -262134, 65443, 0, -327670, 65444, 0, -262134, 65444, 1, -327671, 65445, 0, -327670, 65445, 0, -327671, 65446, 0, -327672, 65447, 0, -327671, 65447, 0, -327673, 65448, 0, -327672, 65448, 0, -327673, 65449, 0, -327674, 65450, 0, -327673, 65450, 0, -327676, 65451, 0, -327675, 65451, 0, -327674, 65451, 0, -327676, 65452, 0, -327675, 65452, 0, -327674, 65452, 0, -327677, 65453, 0, -327676, 65453, 0, -327675, 65453, 0, -327678, 65454, 0, -327677, 65454, 0, -327676, 65454, 0, -327678, 65455, 0, -327679, 65456, 0, -327678, 65456, 0, -327679, 65457, 0, -327680, 65458, 0, -327679, 65458, 0, -327680, 65459, 0, -262145, 65459, 0, -262146, 65460, 0, -262145, 65460, 0, -262148, 65461, 0, -262147, 65461, 0, -262146, 65461, 0, -262145, 65461, 0, -262147, 65462, 0, -262146, 65462, -2147483648, -262147, 65463, 0, -262146, 65463, 0, -262147, 65464, 0, -262146, 65464, 0, -262146, 65465, 0, -262145, 65465, 0, -327680, 65466, 0, -262146, 65466, 0, -262145, 65466, 0, -327680, 65467, 0, -327679, 65467, 0, -262145, 65467, 0, -327680, 65468, 0, -327679, 65468, 0, -327678, 65468, 0, -327679, 65469, 0, -327678, 65469, 0, -327677, 65469, 0, -327678, 65470, 0, -327677, 65470, 0, -327676, 65470, 0, -327677, 65471, 0, -327676, 65471, 0, -327675, 65471, 0, -327676, 65472, 0, -327675, 65472, 0, -327675, 65473, 0, -327674, 65473, 0, -327673, 65473, 0, -327673, 65474, 0, -327672, 65474, 0, -327671, 65474, 0, -327673, 65477, 0, -327672, 65477, 0, -327671, 65477, 0, -327673, 65479, 0, -327672, 65479, 0, -327671, 65479, 0, -327673, 65481, 0, -327672, 65481, 0, -327671, 65481, 0, -327680, 65482, 655360, -262150, 65482, 655360, -262149, 65482, 655360, -262148, 65482, 655360, -262147, 65482, 655360, -262146, 65482, -1073086464, -262145, 65482, 655360, -327680, 65483, 655360, -327673, 65483, 655360, -327672, 65483, 655360, -327671, 65483, 655360, -262150, 65483, 655360, -262149, 65483, 655360, -262148, 65483, 655360, -262147, 65483, 655360, -262146, 65483, 655360, -262145, 65483, 655360, -327680, 65484, 655360, -327673, 65484, 655360, -327672, 65484, 655360, -327671, 65484, 655360, -262150, 65484, 655360, -262149, 65484, 655360, -262148, 65484, 655360, -262147, 65484, 655360, -262146, 65484, 655360, -262145, 65484, 655360, -327680, 65485, 655360, -327673, 65485, 655360, -327672, 65485, 655360, -327671, 65485, 655360, -262150, 65485, 655360, -262149, 65485, 655360, -262148, 65485, 655360, -262146, 65485, 655360, -262145, 65485, 655360, -196614, 65485, 655361, -196613, 65485, 655361, -196612, 65485, 655361, -327680, 65486, 655360, -327673, 65486, 655360, -327672, 65486, 655360, -327671, 65486, -536215552, -262146, 65486, 655360, -262145, 65486, 655360, -131078, 65486, 655361, -131077, 65486, 655361, -131076, 65486, 655361, -327680, 65487, 655360, -327673, 65487, 655360, -327672, 65487, 655360, -327671, 65487, 655360, -262146, 65487, 655360, -262145, 65487, 655360, -65542, 65487, 655361, -65541, 65487, 655361, -65540, 65487, 655361, -327680, 65488, 655360, -327673, 65488, 655360, -327672, 65488, 655360, -327671, 65488, 655360, -262146, 65488, 655360, -262145, 65488, 655360, -6, 65488, 655361, -5, 65488, 655361, -4, 65488, 655361, -327680, 65489, 655360, -327679, 65489, 655360, -327678, 65489, 655360, -327677, 65489, 655360, -327676, 65489, 655360, -327675, 65489, 655360, -327674, 65489, 655360, -327673, 65489, 655360, -327672, 65489, 655360, -327671, 65489, 655360, -262146, 65489, 655360, -262145, 65489, 655360, -6, 65489, 655360, -5, 65489, 655360, -4, 65489, 655360, -327680, 65490, 655360, -327679, 65490, 655360, -327678, 65490, 655360, -327677, 65490, 655360, -327676, 65490, 655360, -327675, 65490, 655360, -327674, 65490, 655360, -327673, 65490, 655360, -327672, 65490, 655360, -327671, 65490, 655360, -262146, 65490, 655360, -262145, 65490, 655360, -6, 65490, 655360, -5, 65490, 655360, -4, 65490, 655360, -327680, 65491, 655360, -327679, 65491, 655360, -327678, 65491, 655360, -327677, 65491, 655360, -327676, 65491, 655360, -327675, 65491, 655360, -327674, 65491, 655360, -327673, 65491, 655360, -327672, 65491, 655360, -327671, 65491, 655360, -262146, 65491, 655360, -262145, 65491, 655360, -6, 65491, 655360, -5, 65491, 655360, -4, 65491, 655360, -6, 65492, 655360, -5, 65492, 655360, -4, 65492, 655360, -6, 65493, 655360, -5, 65493, 655360, -4, 65493, 655360, -6, 65494, 655360, -5, 65494, 655360, -4, 65494, 655360, -6, 65495, 655360, -5, 65495, 655360, -4, 65495, 655360, -6, 65496, 655360, -5, 65496, 655360, -4, 65496, 655360, -6, 65497, 655360, -5, 65497, 655360, -4, 65497, 655360, -6, 65498, 655360, -5, 65498, 655360, -4, 65498, 655360, -6, 65499, 655360, -5, 65499, 655360, -4, 65499, 655360, -6, 65500, 655360, -5, 65500, 655360, -4, 65500, 655360, -6, 65501, 655360, -5, 65501, 655360, -4, 65501, 655360, -6, 65502, 655360, -5, 65502, 655360, -4, 65502, 655360, -6, 65503, 655360, -5, 65503, 655360, -4, 65503, 655360, -6, 65504, 655360, -5, 65504, 655360, -4, 65504, 655360, -6, 65505, 655360, -5, 65505, 655360, -4, 65505, 655360, -6, 65506, 655360, -5, 65506, 655360, -4, 65506, 655360, -6, 65507, 655360, -5, 65507, 655360, -4, 65507, 655360, -6, 65508, 655360, -5, 65508, 655360, -4, 65508, 655360, -6, 65509, 655360, -5, 65509, 655360, -4, 65509, 655360, -6, 65510, 655360, -5, 65510, 655360, -4, 65510, 655360, -6, 65511, 655360, -5, 65511, 655360, -4, 65511, 655360, -6, 65512, 655360, -5, 65512, 655360, -4, 65512, 655360, -6, 65513, 655360, -5, 65513, 655360, -4, 65513, 655360, -6, 65514, 655360, -5, 65514, 655360, -4, 65514, 655360, -6, 65515, 655360, -5, 65515, 655360, -4, 65515, 655360, -6, 65516, 655360, -5, 65516, 655360, -4, 65516, 655360, -6, 65517, 655360, -5, 65517, 655360, -4, 65517, 655360, -6, 65518, 655360, -5, 65518, 655360, -4, 65518, 655360, -6, 65519, 655360, -5, 65519, 655360, -4, 65519, 655360, -6, 65520, 655360, -5, 65520, 655360, -4, 65520, 655360, -6, 65521, 655360, -5, 65521, 655360, -4, 65521, 655360, 65530, 65522, 655361, 65531, 65522, 655361, 65532, 65522, 655361, -6, 65522, 655360, -5, 65522, 655360, -4, 65522, 655360, 0, 65523, 0, 1, 65523, 0, 2, 65523, 0, 65530, 65523, 0, 65531, 65523, 0, 65532, 65523, 0, 65533, 65523, 0, 65534, 65523, 0, 65535, 65523, 0, 0, 65524, 0, 1, 65524, 0, 2, 65524, 0, 65530, 65524, 0, 65531, 65524, 0, 65532, 65524, 0, 65533, 65524, 0, 65534, 65524, 0, 65535, 65524, 0, 0, 65525, 0, 1, 65525, 0, 2, 65525, 0, 65530, 65525, 0, 65531, 65525, 0, 65532, 65525, 0, 65533, 65525, 0, 65534, 65525, 0, 65535, 65525, 0, 0, 65526, 0, 1, 65526, 0, 2, 65526, 0, 0, 65527, 1, 1, 65527, 1, 2, 65527, 1, -65536, 65527, 0, -65535, 65527, 0, -65534, 65527, 0, -65536, 65528, 0, -65535, 65528, 0, -65534, 65528, 0, -65536, 65529, 0, -65535, 65529, 0, -65534, 65529, 0, -65536, 65530, 0, -65535, 65530, 0, -65534, 65530, 0, -65536, 65531, 0, -65535, 65531, 0, -65534, 65531, 0, -65536, 65532, 0, -65535, 65532, 0, -65534, 65532, 0, -65536, 65533, 0, -65535, 65533, 0, -65534, 65533, 0, -65536, 65534, 0, -65535, 65534, 0, -65534, 65534, 0, -65536, 65535, 0, -65535, 65535, 0, -65534, 65535, 0, -3, 65535, 0, -2, 65535, 0, -1, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[connection signal="body_entered" from="Triggers/WelcomeToVeraball" to="." method="_on_WelcomeToVeraball_body_enter"]
[connection signal="body_entered" from="Triggers/CollectAllTheCoins" to="." method="_on_CollectAllTheCoins_body_enter"]
[connection signal="body_entered" from="Triggers/ReachTheGoal" to="." method="_on_ReachTheGoal_body_enter"]
[connection signal="body_entered" from="Triggers/Reset" to="." method="_on_Reset_body_enter"]
